# trafficlight

./: CMakeLists.txt  manifest.json
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
app/: CMakeLists.txt  MyLight.qml  TrafficLight.qml  light.desktop.in
app/components/: CMakeLists.txt
app/tests/autopilot/: run
app/tests/autopilot/TrafficLight/main/: test_main.py
app/ui/: CMakeLists.txt  HelloTab.qml
backend/: CMakeLists.txt
backend/modules/Light/: backend.cpp  backend.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
